Feat: Dom manipulation

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       ></textarea>
       <button class="btn-translate">Translate to Banana</button>
       <p>Translation will come here 👇</p>
-      <textarea class="translation-output"> </textarea>
+      <textarea class="translation-output" readonly> </textarea>
     </main>
 
     <footer>
