--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Banana Talk</title>
+    <link rel="shortcut icon" href="/images/favicon.png?v=1" type="image/png" />
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
